# registry

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  openapi.json  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: auth.md  runbook-dr.md
docs/01-overview/: 01-orientation.md  02-how-its-structured.md  03-vocabulary.md  04-auth.md  04-authentication.md  05-authorization.md
docs/02-get-started/: 01-quickstart.md
docs/03-use-cases/: 01-ai-agent-capability-discovery.md  02-platform-team-shared-registry.md  03-mirroring-external-sources.md  04-event-driven-consumers.md  05-consumer-feedback-and-requests.md  06-layered-abstractions.md  07-aisdlc-pipeline.md  08-compliance-and-audit.md  09-workspaces.md
docs/04-guides/: 01-publish-a-capability.md  02-subscribe-to-events.md  03-sync-connectors.md  04-pii-policies.md
docs/05-reference/: 01-api.md  02-mcp-tools.md  03-configuration.md  04-architecture.md
docs/06-operations/: 01-ops.md  02-progression.md
docs/07-contributing/: 01-local-dev.md  02-ci.md
docs/operator/: workspaces.md
eval/: EVAL.md
eval/fixtures/: search_questions.json  time_travel_scenarios.json
packaging/: README.md
packaging/helm/: Chart.yaml  README.md  artifacthub-repo.yml  values.yaml
registry/: config.py  embedder.py  exceptions.py  logging_config.py  main.py  sync_worker.py  types.py
registry/api/: audit.py  cursor.py  errors.py  schemas.py
registry/audit/: actions.py
registry/auth/: __init__.py  resolver.py
registry/security/: __init__.py  pii_scanner.py
registry/service/: adoption.py  annotations.py  breaking_change.py  catalog.py  embedding_drain.py  entity.py  external_ids.py  facts.py  identity.py  includes.py  integration_lookup.py  interface_diff.py  interface_normalize.py  interface_storage.py  lifecycle.py  notifications.py  progression.py  progression_definition_schema.json  projections.py  retrieval.py  schema.py  slugs.py  subscriptions.py  temporal.py  version_predicates.py  visibility.py  vocabulary.py  workspace.py
registry/storage/: models.py  pg.py
registry/workers/: __init__.py  closure_refresh.py  webhook_delivery.py  workspace_expiry.py
scripts/: backfill_embeddings.py  bootstrap_dev_tenant.py  check_no_doc_refs.py  check_no_phase_named_tests.py  check_visibility_bypass.py  export_openapi.py  mint_token.py  partition_migrate.py  reindex_embeddings.py  seed.py  seed_dev_capabilities.py  seed_loader.py  validate_seeds.py
scripts/load_test/: README.md  read_scenario.js  write_scenario.js
seeds/: README.md  _schema.md  _vocabulary.json
seeds/00-core/: 01-vocabulary.json  02-tenants.json  03-capability-schema.json
seeds/01-saltds/: 01-baseline.json  03-v1.44.json  04-v1.45.json  05-visibility.json  06-adoptions.json  07-progression.json
seeds/02-identity/: 01-baseline.json
seeds/03-prefs/: 01-baseline.json
seeds/04-notifications/: 01-baseline.json
seeds/05-web-sdk/: 01-baseline.json  02-v2.0.json  03-v3.0.json
seeds/06-web-runtime/: 01-baseline.json
seeds/07-owners/: 01-owners.json
seeds/08-integrations/: 01-runtime-sdk-mf-bridge.json
seeds/_templates/: capability-schema.json  capability.template.yaml
seeds/demo-minimal/: v1.json
seeds/salt-ds/: README.md  scrape.py  v1.43.json  v1.44.json  v1.45.json
sync/: connector.py  registry.py  runner.py  webhook.py
sync/connectors/: docs_corpus.py  markdown_adr_rfc.py  openapi.py  package_json.py  release_notes.py
tests/: conftest.py
tests/conformance/: test_admin_routes.py  test_annotation_invariants.py  test_audit_action_vocabulary.py  test_audit_event_vocabulary.py  test_mcp_conformance.py  test_openapi_drift.py  test_tenant_isolation.py  test_workspace_invariants.py
tests/helpers/: __init__.py  auth_harness.py  jwt_factory.py
tests/integration/: conftest.py  test_admin_progression.py  test_adoption_rest.py  test_adoption_subscription_flow.py  test_annotation_status_transitions.py  test_annotation_visibility_cross_tenant.py  test_api_ergonomics.py  test_auth_compose_smoke.py  test_auth_middleware.py  test_blast_radius.py  test_breaking_change_advisor.py  test_breaking_change_exit.py  test_capability_crud.py  test_closure_cache.py  test_consistency_perf_remediation.py  test_consolidation.py  test_cross_tenant_isolation.py  test_delete_idempotency.py  test_dev_seed.py  test_dev_token_bootstrap.py  test_entitlement_auth_flow.py  test_entitlement_jit_provisioning.py  test_external_ids_rest.py  test_http_methods_mode.py  test_integration_capability_exit.py  test_integration_pairs.py  test_interface_storage.py  test_mcp_annotation_smoke.py  test_partition_migration.py  test_pii_block.py  test_progression_write_path.py  test_projection_rest.py  test_rbac_oidc.py  test_retrieval_embedding.py  test_retrieval_ergonomics.py  test_reverse_traversal.py  test_role_enforcement.py  test_rsam_auth_flow.py  test_seed.py  (+10 more)
(+223 files in other folders)
