[project]
name = "registry"
version = "0.0.1"
description = "Open-source, self-hostable platform-of-record for engineering capabilities."
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
readme = "CONTRIBUTING.md"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.0",
    "pgvector==0.3.6",
    "apscheduler==3.10.4",
    "httpx==0.28.1",
    "numpy==2.2.0",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-exporter-otlp==1.29.0",
    "opentelemetry-instrumentation-fastapi==0.50b0",
    "prometheus-client==0.21.1",
    "structlog==24.4.0",
    "authlib==1.3.2",
    "jsonschema==4.23.0",
    "semver>=3.0",
    "sentence-transformers==3.3.1",
    "cachetools==5.5.0",
    "mcp>=1.2,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "testcontainers==4.9.0",
    "mypy==1.13.0",
    "ruff==0.8.2",
    "respx==0.21.1",
    "pytest-timeout==2.3.1",
    "types-jsonschema==4.23.0.20240813",
    "types-PyYAML==6.0.12.20260408",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["registry*", "sync*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends() in default arguments is the idiomatic dependency-injection pattern.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header", "fastapi.Cookie"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["registry", "sync"]
